# AnkiBulk

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.sh  pyproject.toml  vendor.sh
AnkiBulk/: __init__.py  chooser.py  config.py  dialog.py  group.py  help.py  i18n.py  icon.py  main.py  manifest.json  style.css  toggle.py
AnkiBulk/i18n/ar/: ankibulk.yaml
AnkiBulk/i18n/bn/: ankibulk.yaml
AnkiBulk/i18n/de/: ankibulk.yaml
AnkiBulk/i18n/en-US/: ankibulk.ftl  ankibulk.yaml
AnkiBulk/i18n/es/: ankibulk.yaml
AnkiBulk/i18n/fr/: ankibulk.yaml
AnkiBulk/i18n/hi/: ankibulk.yaml
AnkiBulk/i18n/it/: ankibulk.yaml
AnkiBulk/i18n/ja/: ankibulk.yaml
AnkiBulk/i18n/pt-BR/: ankibulk.yaml
AnkiBulk/i18n/ru/: ankibulk.yaml
AnkiBulk/i18n/zh-CN/: ankibulk.yaml
AnkiBulk/i18n/zh-TW/: ankibulk.yaml
AnkiBulk/table/: __init__.py  cell.py  group.py  menu.py  table.py  undo.py
AnkiBulk/text/: __init__.py  group.py  linter.py  options.py
tests/: conftest.py  test_anki.py  test_i18n.py
tests/collections/: .gitignore  genki1.colpkg
